# monero-credit

./: .env.local.example  .envrc  .gitignore  Cargo.toml  Justfile
.github/workflows/: release-nightly.yml
bruno/: amount_due.bru  bruno.json
notes/briefs/: 2026-01-21-gotify.md
notes/plans/: 2026-01-21-gotify-v1.md  2026-01-21-gotify-v2.md
scripts/: run-latest.sh
src/: gotify.rs  main.rs
