[package]
name = "monero-gotify"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "1.0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
